feat: implemented new examples with some tags html

--- a/web/exemplo04/index.html
+++ b/web/exemplo04/index.html
@@ -32,7 +32,25 @@
     <h2>Texto sobrescrito e subescrito</h2>
     <p>Para textos sobrescritos use a tag sup como x<sup>2</sup>+4x</p>
     <p>Para textos subescrito use a tag sub como Log<sub>10</sub>2</p>
-    
+
+    <h2>Inserindo código no HTML</h2>
+    <p> Estou escrevendo um totorial que precisa de um código do tipo </p>
+    <code>git clone https://github.com/raimundoludgerio/estrutura-de-dados.git</code>
+    <p>Para clonar um repositório do github</p>
+
+    <h2>Criando citações:</h2>
+    <p>Como diria Clarice Lispector: <q>O computador é uma máquina burra</q></p>
+
+    <h2>Citações completas</h2>
+    <blockquote cite="https://www.ebooksbrasil.org/adobeebook/alicep.pdf">
+        Se você não sabe para onde ir, qualquer caminho serve
+    </blockquote>
+
+    <h2>Abreviações:</h2>
+    <abbr title="Hypertext Marckup Language">HTML</abbr> e <abbr title="Cascating Style Sheets">CSS</abbr>
+
+    <h2>Tag divertida:</h2>
+    <bdo dir="rtl">Essa tag é a coisa mais inútil do mundo!</bdo>
 </body>
 
 </html>
