feat: add downloads resources

--- a/web/exmplo06/index.html
+++ b/web/exmplo06/index.html
@@ -22,5 +22,14 @@
     <p>
         Para acessar os artigos, <a href="artigos/pagina03.html">clique aqui</a> 
     </p>
+    <h2>Baixando recursos do site:</h2>
+    <p>
+        Para baixar arquivos, basta utilizar:
+    </p>
+    <p>Links para dowmloads:</p>
+    <ul>
+        <li><a href="livros/alicep.pdf">Baixar em formato PDF</a></li>
+        <li><a href="livros/alicep.zip">Baixar em formato ZIP</a></li>
+    </ul>
 </body>
 </html>
