feat: implemented aula002b.py

--- a/web/exemplo01/index.html
+++ b/web/exemplo01/index.html
@@ -12,6 +12,9 @@
     <hr>
     <p>Esse é a nossa primeira página HTML!</p>
     <p>Esse é o segundo parágrafo!</p>
+    <adrress>
+        Rua Dos bobos, número 0
+    </adrress>
 </body>
 
 </html>
