--- a/web/exemplo06/index.html
+++ b/web/exemplo06/index.html
@@ -26,7 +26,7 @@
     <p>
         Para baixar arquivos, basta utilizar:
     </p>
-    <p>Links para dowmloads:</p>
+    <p>Links para downloads:</p>
     <ul>
         <li><a href="livros/alicep.pdf">Baixar em formato PDF</a></li>
         <li><a href="livros/alicep.zip">Baixar em formato ZIP</a></li>
