--- a/web/exemplo07/index.html
+++ b/web/exemplo07/index.html
@@ -9,5 +9,8 @@
     <h1>Inserindo Imagens</h1>
     <p>Aqui vamos inserir uma imagem</p>
     <img src="foto01.jpg" alt="Foto de perfil" width="250px" height="200px"/>
+
+    <h1>Inserindo imagem da web</h1>
+    <img src="https://img.freepik.com/fotos-gratis/vista-frontal-de-uma-bola-de-futebol-novinha-em-folha_23-2148796894.jpg" alt="Foto de bola" />
 </body>
 </html>
