refactor: updated table example

--- a/web/exemplo08/tabelas.html
+++ b/web/exemplo08/tabelas.html
@@ -5,27 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
-    <style>
-        table,
-        tr,
-        th,
-        td {
-            border: 1px solid black;
-        }
-    </style>
 </head>
 
 <body>
     <table>
-        <colgroup>
-            <col span="3" style="font-family: Arial, Helvetica, sans-serif;">
-        </colgroup>
         <caption>Estudantes</caption>
+        <colgroup>
+            <col style="background-color: red; width: 150px; border: 1px solid green; ;">
+            <col style="background-color: blue; width: 175px; border: 1px solid burlywood;">
+            <col style="background-color: purple; width: 50px; border: 1px solid #00e6c4;">
+        </colgroup>
         <thead>
             <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">Cidade</th>
-                <th scope="col">Nota</th>
+                <th>Nome</th>
+                <th>Cidade</th>
+                <th>Nota</th>
             </tr>
         </thead>
         <tbody>
