--- a/web/exemplo15/index.html
+++ b/web/exemplo15/index.html
@@ -7,6 +7,7 @@
     <title>Fontes</title>
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
         body {
             font-family: cursive;
             /*
@@ -18,6 +19,10 @@
             */
             /*Tamanho normal da fonte 16px == 2em */
             font-size: 16px;
+        }
+
+        h1 {
+            font-family: "Work Sans", Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
