web-feat: implemented a new font-styles

--- a/web/exemplo15/font-size.html
+++ b/web/exemplo15/font-size.html
@@ -8,12 +8,36 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
         body {
+            font-family: "Work Sans", Arial, Helvetica, sans-serif;
             font-size: 16px;
         }
 
         h1 {
-            font-family: "Work Sans", Arial, Helvetica, sans-serif;
+            font-weight: 800;
+        }
+
+        h2 {
+            font-weight: 500;
+        }
+
+        p {
+            font-weight: 300;
+        }
+
+        footer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-justify: distribute;
+        }
+
+        footer>p {
+            font-weight: lighter;
+        }
+        footer>p>em {
+            font-weight: 300;
         }
     </style>
 </head>
@@ -40,6 +64,10 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ratione provident tenetur autem porro
         laboriosam quas magni aliquid alias laborum inventore beatae tempora rerum, natus voluptates dignissimos quos!
         Aperiam, adipisci.</p>
+
+    <footer>
+        <p>Desenvolvido por: <em>Raimundo Marcos</em></p>
+    </footer>
 </body>
 
 </html>
