web-feat: implemented a new styles font-weight using numbers

--- a/web/exemplo15/font-size.html
+++ b/web/exemplo15/font-size.html
@@ -89,7 +89,17 @@
                 expedita eum cumque.</p>
         </aside>
     </section>
-
+    <ul>
+        <li style="font-weight: 100;">100</li>
+        <li style="font-weight: 200;">200</li>
+        <li style="font-weight: 300;">300</li>
+        <li style="font-weight: 400;">400</li>
+        <li style="font-weight: 500;">500</li>
+        <li style="font-weight: 600;">600</li>
+        <li style="font-weight: 700;">700</li>
+        <li style="font-weight: 800;">800</li>
+        <li style="font-weight: 900;"> 900</li>
+    </ul>
     <footer>
         <p>Desenvolvido por: <em>Raimundo Marcos</em></p>
     </footer>
