--- a/web/exemplo15/font-size.html
+++ b/web/exemplo15/font-size.html
@@ -16,10 +16,23 @@
 
         h1 {
             font-weight: 800;
+            font-style: italic;
+            text-decoration: underline;
+
         }
 
         h2 {
             font-weight: 600;
+        }
+
+        h3 {
+            /*Essas próximas três combinações podem ser simplificadas em uma única, chamada shorthands: font*/
+            /* font-weight: 900;
+            font-size: 3em;
+            font-style: italic; */
+            /*font: style, weight, size, family*/
+            font: normal 300 3em "Work Sans";
+
         }
 
         p {
@@ -33,9 +46,11 @@
         aside>p {
             font-weight: 300;
         }
-        aside>p>em{
+
+        aside>p>em {
             font-weight: bold;
         }
+
         footer {
             display: flex;
             justify-content: center;
@@ -67,8 +82,11 @@
             ratione in minima rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laudantium
             perspiciatis voluptas vitae repellat animi et, nemo iste deleniti necessitatibus inventore ratione ex
             voluptates
-            id sed cum, vero eos? Tempore.</p>
-
+            id sed cum, vero eos? Tempore.
+        </p>
+        <h3>Subtópico 1.1</h3>
+        <p>Lorem ipsum dolor sit amet consectetur
+        </p>
         <h2>Subtítulo 02</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dignissimos sed, est possimus iusto
             voluptatum
@@ -84,7 +102,8 @@
             quos!
             Aperiam, adipisci.</p>
         <aside>
-            <p>Lorem ipsum <em>dolor sit amet consectetur adipisicing</em> elit. Delectus officiis assumenda ad, nisi libero
+            <p>Lorem ipsum <em>dolor sit amet consectetur adipisicing</em> elit. Delectus officiis assumenda ad, nisi
+                libero
                 provident officia praesentium ab ratione placeat iure minima molestiae quidem quos aliquid dolore,
                 expedita eum cumque.</p>
         </aside>
