web-feat: implemented font-family with Google Fonts

--- a/web/exemplo15/font-size.html
+++ b/web/exemplo15/font-size.html
@@ -27,11 +27,13 @@
 
         h3 {
             /*Essas próximas três combinações podem ser simplificadas em uma única, chamada shorthands: font*/
-            /* font-weight: 900;
+            /* 
+            font-family: "Work Sans", Arial, sans-serif
+            font-weight: 900;
             font-size: 3em;
             font-style: italic; */
             /*font: style, weight, size, family*/
-            font: normal 300 3em "Work Sans";
+            font: 300 3em "Work Sans", sans-serif;
 
         }
 
@@ -85,8 +87,7 @@
             id sed cum, vero eos? Tempore.
         </p>
         <h3>Subtópico 1.1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur </p>
         <h2>Subtítulo 02</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dignissimos sed, est possimus iusto
             voluptatum
