web-feat: implemented examples css

--- a/web/exemplo14/index.html
+++ b/web/exemplo14/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução ao CSS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
+    <p>Parágrafo estilizado</p>
+
+
+
+
+
+
     <h1>Testando diferentes Estilos com CSS</h1>
     <h2 style="background-color: blue;color: gray;">Tópico 01</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero distinctio beatae voluptates excepturi ipsam harum quibusdam ullam nam enim ipsum quam recusandae voluptas exercitationem animi, rerum eaque atque facilis quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ipsa veniam necessitatibus repudiandae dolor qui minus culpa. Blanditiis, est! Officiis similique provident blanditiis voluptatem eveniet culpa sapiente suscipit expedita aperiam!</p>
