--- a/web/exemplo09/index.html
+++ b/web/exemplo09/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" href="ifpb.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon_io/favicon-16x16.png" type="image/png">
     
     <title>Favicon</title>
 </head>
