--- a/web/exemplo10/index.html
+++ b/web/exemplo10/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens Dinâmicas</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&display=swap');
+
+        html {
+            font-size: 150px;
+        }
+
+        body {
+            font-size: 100px;
+        }
+
+        h1 {
+            font-family: "Underdog", system-ui;
+            font-size: 1em;
+            font-style: italic;
+            font-weight: bold;
+        }
+
+        p {
+            font-family: "Work Sans";
+            font-weight: 900;
+        }
+        footer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        footer>p {
+            font-family: "Codystar", sans-serif;
+            font-weight: 300;
+            font-style: normal;
+            font-size: 0.5em;
+        }
+        p.paragrafo{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 0.4em;
+            text-align: justify;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Imagens que se adaptam sozinha</h1>
     <p>Teste esse site em vários tamanhos de telas</p>
-
-    <picture>
-        <source media="(max-width: 750px)" srcset="imagens/lua-300px.png">
-        <source media="(max-width: 1050px)" srcset="imagens/lua-700px.png">
-        <img src="imagens/lua-1000px.png" alt="foto da lua a noite">
-    </picture>
+    <p class="paragrafo">Teste esse site em vários tamanhos de telas</p>
+    <p class="paragrafo">Teste esse site em vários tamanhos de telas</p>
+    <p class="paragrafo">Teste esse site em vários tamanhos de telas</p>
+    <p class="paragrafo">Teste esse site em vários tamanhos de telas</p>
+    <footer>
+        <p>Desenvolvido por: Raimundo Marcos</p>
+    </footer>
 </body>
+
 </html>
