web: implemented new examples leyouts grids

--- a/web/exemplo20/block/display.html
+++ b/web/exemplo20/block/display.html
@@ -20,19 +20,17 @@
         <ul>
             <li>O elemento ocupará toda a largura disponível do seu contêiner pai, por padrão.</li>
             <li>Ele sempre começa em uma nova linha, empurrando os elementos seguintes para baixo.</li>
-            <li>É possível definir largura (width), altura (height), margens (margin), preenchimentos (padding), entre
-                outras propriedades de layout..</li>
-            </ul>
-            <br>
-        <p>Exemplos de elementos com <strong>display: block</strong> por padrão:</p>
+            <li>É possível definir largura (width), altura (height), margens (margin), preenchimentos (padding), entre outras propriedades de layout..</li>
+        </ul>
         <pre>
             <code>
-&lt;h1&gt;Div&lt;/h1&gt;
-&lt;h1&gt;h1&lt;/h1&gt;
-&lt;h2&gt;h2&lt;/h2&gt;
-&lt;section&gt;section&lt;/section&gt;
-&lt;article&gt;article&lt;/article&gt;
-&lt;p&gt;p&lt;/p&gt;
+    Exemplos de elementos com <strong>display: block</strong> por padrão:
+    &lt;h1&gt;Div&lt;/h1&gt;
+    &lt;h1&gt;h1&lt;/h1&gt;
+    &lt;h2&gt;h2&lt;/h2&gt;
+    &lt;section&gt;section&lt;/section&gt;
+    &lt;article&gt;article&lt;/article&gt;
+    &lt;p&gt;p&lt;/p&gt;
             </code>
         </pre>
 
