--- a/web/exemplo20/grid/grids.html
+++ b/web/exemplo20/grid/grids.html
@@ -16,15 +16,15 @@
         </div>
         <div class="item">Item B</div>
     </div>
-    <p>Texto antes <div class="grid">GRID</div> texto depois</p>
- 
-    <p>Texto antes <span class="inline-grid">INLINE-GRID</span> texto depois</p>
-    
+
     <hr>
     <div class="container-2">
         <div class="item-container">Elemento A</div>
         <div class="item-container">Elemento B</div>
         <div class="item-container">Elemento C</div>
+        <div class="item-container">Elemento D</div>
+        <div class="item-container">Elemento E</div>
+        <div class="item-container">Elemento F</div>
     </div>
     <hr>
     <div class="container-3">
@@ -33,7 +33,63 @@
         <div class="item-c">Lateral</div>
         <div class="item-d">Rodapé</div>
     </div>
-    
+    <hr>
+    <h1>Testando alinhamentos na GRID</h1>
+    <section class="container-direita">
+        <aside>Alinhamento à direita</aside>
+    </section>
+    <section class="container-esquerda">
+        <aside>Alinhamento à esquerda</aside>
+    </section>
+    <section class="container-centralizado">
+        <aside>Centro</aside>
+    </section>
+    <hr>
+    <h1>Testando alinhamentos na GRID</h1>
+    <section class="container-cima">
+        <aside>Alinhamento em cima</aside>
+    </section>
+    <section class="container-meio">
+        <aside>Alinhamento meio</aside>
+    </section>
+    <section class="container-baixo">
+        <aside>Embaixo</aside>
+    </section>
+    <section class="container-base">
+        <aside>baseline</aside>
+    </section>
+
+    <hr>
+    <h1>Testando alinhamentos na Justify-content</h1>
+    <section class="container-justificado-esquerda">
+        <aside>Alinhado o container à esquerda</aside>
+    </section>
+    <section class="container-justificado-direita">
+        <aside>Alinhado o container à direita</aside>
+    </section>
+    <section class="container-justificado-centro">
+        <aside>Alinhado o container no meio</aside>
+    </section>
+    <br>
+    <section class="container-justificado-espaço-entre">
+        <aside>Alinhado </aside>
+        <aside>o container </aside>
+        <aside>com espaços</aside>
+    </section>
+    <br>
+    <section class="container-justificado-espaço-redor">
+        <aside>Alinhado </aside>
+        <aside>o container </aside>
+        <aside>com espaços</aside>
+        <aside>ao redor de cada elemento</aside>
+    </section>
+    <br>
+    <section class="container-justificado-igual">
+        <aside>Alinhando </aside>
+        <aside>com um espaço </aside>
+        <aside>a mais em cada</aside>
+        <aside>lado do container</aside>
+    </section>
 </body>
 
 </html>
