web: implemented finished example layout grid

--- a/web/exemplo20/flex/flex.html
+++ b/web/exemplo20/flex/flex.html
@@ -11,12 +11,9 @@
 <body style="background-color: azure;">
     <h1 style="text-align: center;">Testando Layouts com FlexBox container</h1>
     <section class="container">
-        <aside class="principal">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ex adipisci amet cupiditate,
-            tempora quidem distinctio quod aperiam delectus, neque maxime corrupti praesentium voluptatum temporibus
-            fugiat illum tempore. Atque, facilis?</aside>
-        <aside class="secundario">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia veniam quo quisquam
-            dolor iure culpa unde ullam minus. Ipsum corrupti eveniet tempore dolorum quasi praesentium quidem autem rem
-            itaque</aside>
+        <aside class="principal">Item 1</aside>
+        <aside class="secundario">Item 2</aside>
+        <aside class="terciario">Item 3</aside>
     </section>
 </body>
 
