--- a/web/javascript/aula02/index.html
+++ b/web/javascript/aula02/index.html
@@ -6,6 +6,6 @@
     <title>Entendendo função Assíncrona</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="promise.js"></script>
 </body>
 </html>
