--- a/web/javascript/aula02/index.html
+++ b/web/javascript/aula02/index.html
@@ -6,6 +6,9 @@
     <title>Entendendo função Assíncrona</title>
 </head>
 <body>
-    <script src="async.js"></script>
+    <div id="conteudo">
+        
+    </div>
+    <script src="promise.js"></script>
 </body>
 </html>
